--- a/packages/src/components/global.module.scss
+++ b/packages/src/components/global.module.scss
@@ -1,72 +1,32 @@
 .fit {
+  min-height: fit-content;
+  min-width: fit-content;
+
   height: fit-content;
   width: fit-content;
 }
 
-.uil-font-base {
-  font-size: var(--uil-font-medium);
-  line-height: var(--uil-font-medium);
+.fontSmall {
+  font-size: var(--uil-m);
+  line-height: var(--uil-m);
 }
 
-.uil-check {
-  position: relative;
-  display: block;
+.fontMedium {
+  font-size: var(--uil-l);
+  line-height: var(--uil-l);
+}
+
+.fontLarge {
+  font-size: var(--uil-xxl);
+  line-height: var(--uil-xxl);
+}
+
+.pointer {
   cursor: pointer;
-  font-size: var(--uil-font-small);
-  line-height: var(--uil-font-small);
-  min-height: var(--uil-l);
-  min-width: var(--uil-l);
   user-select: none;
-  border: 2px solid var(--uil-black-alt);
-  box-sizing: border-box;
+}
 
-  &:has(input:disabled) {
-    cursor: not-allowed;
-    background-color: var(--uil-grey);
-    border-color: var(--uil-grey-dark);
-  }
-
-  &.uil-dark {
-    border-color: var(--uil-grey);
-
-    &:has(input:disabled) {
-      background-color: var(--uil-black-light);
-      border-color: var(--uil-grey-dark);
-    }
-  }
-
-  input {
-    position: absolute;
-    cursor: pointer;
-    height: 0;
-    width: 0;
-    opacity: 0;
-
-    &:checked {
-      ~ .uil-checkmark {
-        transform: scale(1);
-      }
-    }
-
-    &:disabled {
-      ~ .uil-checkmark {
-        background-color: var(--uil-grey-dark);
-      }
-    }
-  }
-
-  .uil-checkmark {
-    position: absolute;
-    top: 25%;
-    left: 25%;
-    background-color: var(--uil-black-alt);
-    width: var(--uil-xs);
-    height: var(--uil-xs);
-    transform: scale(0);
-    transition: .1s ease;
-
-    &.uil-dark {
-      background-color: var(--uil-white);
-    }
-  }
+.notAllowed {
+  cursor: not-allowed;
+  user-select: none;
 }
