--- a/packages/src/components/modal/modal.scss
+++ b/packages/src/components/modal/modal.scss
@@ -91,8 +91,8 @@
       }
 
       .uil-modal-text {
-        font-size: var(--uil-font-medium);
-        line-height: var(--uil-font-medium);
+        font-size: var(--uil-l);
+        line-height: var(--uil-l);
         margin: 0;
       }
 
