* input redesign part 2

--- a/packages/src/components/common/styles/variables.scss
+++ b/packages/src/components/common/styles/variables.scss
@@ -11,7 +11,8 @@
   --uil-grey-dark: #878787;
   --uil-grey-darker: #676767;
 
-  --uil-outline-focus: #1E90FFFF;
+  
+  --uil-outline-focus: #2779ca;
   --uil-outline-disabled: #8B0000FF;
 
   --uil-success-light: #01dfa5;
@@ -37,6 +38,4 @@
   --uil-xl: 1.5rem;
   --uil-xxl: 1.75rem;
   --uil-xxxl: 2rem;
-
-  --uil-font-small: var(--uil-m);
 }
