* input redesign part 2

--- a/packages/src/components/common/styles/global.module.scss
+++ b/packages/src/components/common/styles/global.module.scss
@@ -28,3 +28,8 @@
 .notAllowed {
   cursor: not-allowed;
 }
+
+//this is in preparation for a dark mode refactor
+.dark {
+  //--uil-black: white;
+}
