* adds support for error prop

--- a/packages/src/components/common/styles/variables.scss
+++ b/packages/src/components/common/styles/variables.scss
@@ -13,13 +13,13 @@
 
   
   --uil-outline-focus: #2779ca;
-  --uil-outline-disabled: #8B0000FF;
 
   --uil-success-light: #01dfa5;
   --uil-success: #009c73;
   --uil-success-dark: #014334;
 
   --uil-error-light: #FF073A;
+  --uil-error-alt: #CF0934;
   --uil-error: #a30029;
   --uil-error-dark: #4e0015;
 
