--- a/packages/src/components/input/input.module.scss
+++ b/packages/src/components/input/input.module.scss
@@ -153,14 +153,14 @@
     }
 
     .decorator {
-      opacity: .5;
+      opacity: .75;
       
       &.focus {
         visibility: hidden;
       }
     }
 
-    .input:focus ~ .decorator.focus {
+    .input:focus ~ .decorator.focus, .input:not(:placeholder-shown) ~ .decorator.focus {
       visibility: visible;
     }
 
