--- a/packages/src/components/common/styles/global.module.scss
+++ b/packages/src/components/common/styles/global.module.scss
@@ -34,4 +34,19 @@
   --uil-outline-focus: #7bb4ff;
   --uil-grey-dark: #c4c4c4;
   --uil-grey-alt: #c3c3c3;
+
+  --uil-default-hover: 50, 121, 202;
+  --uil-black-alt: #c3c3c3;
+
+  --uil-success: #00cc96;
+  --uil-success-hover: 0, 163, 115;
+
+  --uil-warning: #FFFF3E;
+  --uil-warning-alt: #dcdc38;
+  --uil-warning-hover: 255, 255, 30;
+  
+  --uil-error: #fb0b41;
+  --uil-error-hover: 239, 34, 79;
+  
+  --uil-custom-hover: 255, 255, 255;
 }
