* fixes link button style

--- a/packages/src/components/button/button.module.scss
+++ b/packages/src/components/button/button.module.scss
@@ -1,6 +1,7 @@
 @use '../common/styles/mixin' as *;
 
 .button {
+  display: block;
   border: 1px solid transparent;
   border-radius: 5px;
   box-sizing: border-box;
