* adds custom not found page

--- a/docs/styles/styles.module.scss
+++ b/docs/styles/styles.module.scss
@@ -19,6 +19,15 @@
   }
 }
 
+.notFound {
+  h1 {
+    font-weight: bold;
+    font-size: 2rem;
+    line-height: 2rem;
+    margin-bottom: 3rem;
+  }
+}
+
 .showCaseWrapper {
   display: flex;
   justify-content: space-between;
